--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "colorthief": "^2.4.0",
     "vue": "^3.4.21"
   },
   "devDependencies": {
